--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,7 @@
+# required
 TRAEFIK_HOST=
 TRAEFIK_ACME_MAIL=
 GITHUB_ACCESS_TOKEN=
-OWNCLOUD_DOCKER_IMAGE=
-OWNCLOUD_INSTANCE_DOMAIN=
 OWNCLOUD_LICENSE_KEY=
 OWNCLOUD_WOPI_TOKEN_KEY=
 OWNCLOUD_WOPI_OFFICE_ONLINE_SERVER=
@@ -13,4 +12,5 @@ OWNCLOUD_OIDC_CLIENT_ID=
 OWNCLOUD_OIDC_CLIENT_SECRET=
 OWNCLOUD_OIDC_SCOPES_API=
 
-
+# optional
+OWNCLOUD_DOCKER_IMAGE=owncloud/server:latest
